...
            "value" : "Abbrechen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mégse"
...
            "value" : "Löschen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Törlés"
...
            "value" : "Eier"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Eggs"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tojás"
...
            "value" : "Milch"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Milk"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tej"
...
            "state" : "translated",
            "value" : "Keresés vagy új kategória"
          }
        }
      }
    },
    "product.detail.addToList" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zur Liste"
...
            "value" : "Kopieren"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Copy"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Másolás"
...
            "value" : "Verlauf"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "History"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Előzmények"
...
            "value" : "Nichts auf Lager"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nothing in stock"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nincs készleten"
...
            "value" : "Kategorie"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Category"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kategória"
...
            "value" : "Favorit"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Favorite"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kedvenc"
...
            "value" : "Änderungen verwerfen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Discard Changes"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Módosítások elvetése"
...
            "state" : "translated",
            "value" : "Még nincsenek termékek"
          }
        }
      }
    },
    "products.filter" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nach Kategorie filtern"
...
            "state" : "translated",
            "value" : "Újra"
          }
        }
      }
    },
    "shopping.add.back" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zurück"
...
            "state" : "translated",
            "value" : "Vissza"
          }
        }
      }
    },
    "shopping.add.confirm" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hinzufügen"
...
            "state" : "translated",
            "value" : "Kiválasztás a térképen"
          }
        }
      }
    },
    "shopping.add.next" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Weiter"
...
